kubernetes/apps/self-hosted/manyfold/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: "Manyfold is self-hosted file sharing and collaboration for 3D prints."
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: manyfold.svg
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Manyfold
spec:
  hostnames:
    - "${APP}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: self-hosted
          port: ${APP_PORT}
